# botio

./: .gitignore  README.md  pyproject.toml  requirements.txt
botio/: __init__.py  app.py  context.py  dispatcher.py  responses.py
botio/adapters/: base.py  factory.py  fake.py  telegram.py
botio/models/: chat.py  message.py  update.py  user.py
docs/: AI_CONTEXT.md
